--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+/* border box to fix scroll cause by padding */
 *{
     box-sizing: border-box;
 }
+/* hint of input atributes */
+::placeholder {
+    font-family: shabnam;
+    color: #BEBEBE;
+  }
+/* add shabnam to project */
 @font-face {
     font-family: shabnam;
     src: url(./Assets/Fonts/Shabnam.ttf);
@@ -15,6 +22,7 @@
     src: url(./Assets/Fonts/Shabnam-Light.ttf);
     font-weight: lighter;
 }
+/* add Comfortaa to project */
 @font-face {
     font-family: Comfortaa;
     src: url(./Assets/Fonts/Comfortaa-Regular.ttf);
@@ -29,6 +37,7 @@
     src: url(./Assets/Fonts/Comfortaa-Light.ttf);
     font-weight: lighter;
 }
+/* main body */
 body{
     width: 100vw;
     height: 100vh;
@@ -36,13 +45,14 @@ body{
     padding: 0;
     direction: rtl;
 }
+/* main div */
 #body{
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
 }
-/* right slide body  */
+/* ++++++++++++++++++++ right side main div +++++++++++++++ */
 #rightSide{
     width: 45%;
     height: 100%;
@@ -52,17 +62,20 @@ body{
     align-items: center;
     font-family: shabnam;
 }
+/* main form layout */
 #login-form-layout{
-    width: 70%;
+    width: 63%;
     height: 80%;
     display: flex;
     flex-direction: column;
 }
+/* first header */
 #login-header-text{
     color: #0093EF;
     font-weight: bold;
     font-size: 1rem;
 }
+/* form below fist header */
 #form-layout{
     width: 100%;
     height: 100%;
@@ -71,6 +84,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
 }
+/* header of form */
 #form-head{
     width: 100%;
     height: 13%;
@@ -78,15 +92,124 @@ body{
     flex-direction: column;
     justify-content: space-between;
 }
+/* headers */
 #entry{
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     color: #424242;
 }
 #entry-description{
-    font-size: 0.9rem;
+    font-size: 0.9vw;
     color: #9F9F9F;
 }
-/* left slide body */
+/* form section */
+#form{
+    width: 100%;
+    height: 75%;
+}
+/* layout config for form */
+.form{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+/* input layouts */
+.inputs-layout{
+    width: 100%;
+    height: auto;
+    margin-top: 8%;
+}
+/* first input marfin exception */
+#firstinput{
+    margin-top: 0 !important;
+}
+/* text input class config */
+.text-inputs{
+    width: 100%;
+    height: auto;
+    padding-bottom: 10px;
+    outline: none;
+    border: none;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: #BEBEBE;
+    background-repeat: no-repeat;
+    background-size: 1rem;
+}
+.text-inputs:focus{
+    border-bottom-color: #0193ED;
+    border-bottom-width: 2px;
+    color: #0193ED;
+}
+/* username part */
+#email{
+    background-image: url("./Assets/SVG/userGray.svg");
+    background-size: 0.8rem;
+}
+#email:focus{
+    background-image: url("./Assets/SVG/userBlue.svg");
+}
+/* password part */
+#password{
+    background-image: url("./Assets/SVG/passwordGray.svg");
+}
+#password:focus{
+    background-image: url(./Assets/SVG/passwordBlue.svg);
+}
+/* capcha part */
+.recapcha-layout{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-between;
+}
+#chapcha{
+    background-image: url("./Assets/SVG/keyboardGray.svg");
+    width: 60%;
+}
+#chapcha:focus{
+    background-image: url("./Assets/SVG/keyboardBlue.svg");
+}
+#capcha-img{
+    width: 20%;
+}
+#capcha-png{
+    width: 5vw;
+    height: 1.5vw;
+    margin-left: 10px;
+}
+#refresh-capcha{
+    width: 1vw;
+    height: 1vw;
+}
+/* submit button */
+#submit{
+    width: 100%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    background-color: #0093ED;
+    font-family: shabnam;
+    font-size: 1.1rem;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    -webkit-box-shadow: -3px 6px 9px 0px rgba(0,0,0,0.31);
+    -moz-box-shadow: -3px 6px 9px 0px rgba(0,0,0,0.31);
+    box-shadow: -3px 6px 9px 0px rgba(0,0,0,0.31);
+    margin-top: 3%;
+}
+.checkbox-layout{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    margin-top: 3% !important;
+}
+#checkbox-label{
+    font-size: 0.8rem;
+    color: #9F9F9F;
+}
+/* ++++++++++++++++++++++ left side body +++++++++++++++++++++++ */
 #leftSide{
     width: 55%;
     height: 100%;
