--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     src: url(./Assets/Fonts/Comfortaa-Regular.ttf);
 }
 @font-face {
-    font-family: Comfortaam;
+    font-family: Comfortaa_bold;
     src: url(./Assets/Fonts/Comfortaa-Bold.ttf);
     font-weight: bold;
 }
@@ -54,8 +54,8 @@ body{
 }
 /* ++++++++++++++++++++ right side main div +++++++++++++++ */
 #rightSide{
-    width: 45%;
-    height: 100%;
+    width: 45vw;
+    height: 100vh;
     background-color: white;
     display: flex;
     justify-content: center;
@@ -199,6 +199,7 @@ body{
     box-shadow: -3px 6px 9px 0px rgba(0,0,0,0.31);
     margin-top: 3%;
 }
+/* checkbox section */
 .checkbox-layout{
     display: flex;
     flex-direction: row;
@@ -211,7 +212,73 @@ body{
 }
 /* ++++++++++++++++++++++ left side body +++++++++++++++++++++++ */
 #leftSide{
-    width: 55%;
-    height: 100%;
+    width: 55vw;
+    height: 100vh;
     background: linear-gradient(45deg, rgba(30,181,236,1) 0%, rgba(153,241,219,1) 100%);
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    overflow: hidden;
+}
+#logo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    position: sticky;
+}
+#logo-img{
+    width: 10vw;
+    height: 20vh;
+}
+.wave-div {
+    background-color:white;
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    position:absolute;
+    left:0;
+    top:0;
+    -webkit-animation: pulsate 5s ease-out;
+    -webkit-animation-iteration-count: infinite; 
+    opacity: 0.0;
+    -webkit-animation-delay: 1s;
+}
+#wave2{
+    -webkit-animation-delay: 1.5s;
+}
+#wave3{
+    -webkit-animation-delay: 2s;
+}
+#wave4{
+    -webkit-animation-delay: 2.5s;
+}
+#wave5{
+    -webkit-animation-delay: 3s;
+}
+.logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+@-webkit-keyframes pulsate {
+    0% {-webkit-transform: scale(0.1, 0.1); opacity: 0.2;}
+    100% {-webkit-transform: scale(1.5, 1.5); opacity: 0.0;}
+}
+#program-name-layout{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5vh;
+    justify-content: flex-end;
+}
+#program-name{
+    white-space: nowrap;
+    font-family: Comfortaa_bold;
+    color: white;
 }
